docker/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parkshare
  labels:
    name: parkshare
    app: parkshare
